@startuml
hide empty description

[*] --> IdleState
IdleState -> WateringState : turnWatering()
IdleState -> LightingState : turnLight()
WateringState --> IdleState : turnIdle()
WateringState --> LightingState : turnLigh()
LightingState --> IdleState : turnIdle()
LightingState --> WateringState : turnWatering()
@enduml